# course_work_6

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: habits.json  users.json
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
users/: admin.py  models.py  permissions.py  serializer.py  tests.py  views.py
